@@ -94,11 +94,11 @@ extern "C" {
 //! Major version number.
 #define CLINGO_VERSION_MAJOR 5
 //! Minor version number.
-#define CLINGO_VERSION_MINOR 0
+#define CLINGO_VERSION_MINOR 1
 //! Revision number.
-#define CLINGO_VERSION_REVISION 0
+#define CLINGO_VERSION_REVISION 1
 //! String representation of version.
-#define CLINGO_VERSION #CLINGO_VERSION_MAJOR "." #CLINGO_VERSION_MINOR "." #CLINGO_VERSION_REVISION
+#define CLINGO_VERSION "5.1.1"
 
 //! Signed integer type used for aspif and solver literals.
 typedef int32_t clingo_literal_t;
