@@ -1,29 +1,0 @@
-// {{{ GPL License
-
-// This file is part of gringo - a grounder for logic programs.
-// Copyright (C) 2013  Roland Kaminski
-
-// This program is free software: you can redistribute it and/or modify
-// it under the terms of the GNU General Public License as published by
-// the Free Software Foundation, either version 3 of the License, or
-// (at your option) any later version.
-
-// This program is distributed in the hope that it will be useful,
-// but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-// GNU General Public License for more details.
-
-// You should have received a copy of the GNU General Public License
-// along with this program.  If not, see <http://www.gnu.org/licenses/>.
-
-// }}}
-
-#ifndef _GRINGO_VERSION_HH
-#define _GRINGO_VERSION_HH
-
-#define GRINGO_VERSION "5.1.1"
-#define GRINGO_VERSION_MAJOR 5
-#define GRINGO_VERSION_MINOR 1
-#define GRINGO_VERSION_REVISION 1
-
-#endif // _GRINGO_VERSION_HH
